# CryptKeep

./: .gitignore  .pre-commit-config.yaml  0  AGENTS.md  CANON.txt  CHECKPOINTS.md  DECISIONS.md  Makefile  README.md  REMAINING_TASKS.md  Untitled.ipynb  apply_all.py  apply_phase102.py  apply_phase103.py  apply_phase106.py  apply_phase108.py  apply_phase109.py  apply_phase113.py  apply_phase115.py  apply_phase116.py.bak  apply_phase123.py  apply_phase124.py  apply_phase125.py  apply_phase128.py  audit_failure_ledger.md  build_desktop_windows.ps1  check_project.sh  conformance_tests.md  create_market_quality_guard.py  create_review_bundle.sh  desktop_launcher.py  drill_results.md  fix_dashboard.py  fix_indentation.py  fix_phase100_imports.py  full_patch.sh  hello.py  install.py  patch.txt  phase53_patch.py  (+19 more)
crypto-trading-ai/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
crypto-trading-ai/.githooks/: pre-commit
crypto-trading-ai/.github/workflows/: backend-ci.yml
crypto-trading-ai/backend/app/: main.py
crypto-trading-ai/backend/migrations/: env.py
crypto-trading-ai/backend/tests/: conftest.py  test_connections.py  test_dashboard.py  test_error_sanitization.py  test_health.py  test_market.py  test_research.py  test_risk.py  test_settings.py  test_terminal.py  test_trading.py
crypto-trading-ai/docs/: api-contracts.md  architecture.md  roadmap.md  workflows.md
crypto-trading-ai/frontend/: eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
crypto-trading-ai/scripts/: check_github_workflows_sync.sh  check_openapi_sync.py  generate_shared_openapi.py  generate_shared_schemas.py  install_git_hooks.sh  local_dev_ports.py  run_backend.sh  run_backend_auto_port.py  run_compose_auto_ports.py  run_frontend.sh  run_frontend_auto_port.py  seed_demo_data.py  sync_github_workflows.sh  validate_shared_mock_data.py
trade-ai-mvp/: README.md  pyproject.toml
trade-ai-mvp/docs/: PERMISSIONS_POLICY_MATRIX.md  PHASE2_PAPER_TRADING_BACKLOG.md  SERVICE_CONTRACTS.md  WORKFLOW_SPECS.md
trade-ai-mvp/frontend/: index.html
trade-ai-mvp/scripts/: paper_backup.sh
trade-ai-mvp/shared/: __init__.py  audit_client.py  logging.py
trade-ai-mvp/tests/: test_api_v1_contracts.py  test_domain_model_ownership.py  test_explain_flow.py  test_gateway_contracts.py  test_happy_path_e2e.py  test_market_ingestion.py  test_normalization.py  test_orchestrator_resilience.py  test_permissions_policy_matrix.py  test_risk_stub_contract.py  test_state_machines.py  test_workflow_contracts.py
(+2928 files in other folders)
