[project]
name = "crypto-trading-ai"
version = "0.1.0"
description = "Starter backend for a crypto trading AI platform"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
