[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-ai-mvp"
version = "0.1.0"
description = "Phase 1 crypto research copilot"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.1.19",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.4",
  "httpx>=0.27.0",
  "redis>=5.0.8",
  "qdrant-client>=1.10.1",
  "python-dateutil>=2.9.0.post0",
  "beautifulsoup4>=4.12.3",
  "pytest>=8.3.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
